# teamup-backend

./: .gitignore  README.md  SETUP_EMAIL.md  config.py  database.py  install.bat  install.sh  main.py  main_crawler.py  pyproject.toml  requirements.txt  setup.py
jobs/: __init__.py  analyzer.py  crawler.py
jobs/crawling/: contestkorea.py  linkareer.py  thinkyou.py
ml/: __init__.py  message_generator.py  predict.py  preprocessing.py  synergy_service.py
models/: __init__.py  contest.py  experience.py  notification.py  personality.py  recruitment.py  role.py  skill.py  user.py  user_role.py  user_skill.py
routers/: applications.py  comments.py  contests.py  notifications.py  personality.py  profile.py  recruitments.py  registration.py  synergy.py  users.py
schemas/: contest.py  notification.py  personality.py  recruitment.py  registration.py  synergy.py  user.py
utils/: auth.py  email_auth.py  fcm_service.py  notification_service.py  scheduler.py
